# python-pipeline

./: README.md  pyproject.toml
.github/workflows/: ci-python.yaml
src/simple_http_checker/: checker.py  cli.py
tests/: test_checker.py  test_cli.py
