[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-http-checker"
version = "2.1.1"
description = "A simple CLI tool to check the status of URLs."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.28,<3.0",
  "click>=8.0,<9.0"
]

[project.optional-dependencies]
dev = [
  "ruff",
  "black"
]

[project.scripts]
check-urls = "simple_http_checker.cli:main"

[tool.ruff]
line-length = 65
indent-width = 4

[tool.black]
line-length = 88